[tool.poetry]
name = "funlab-libs"
version = "0.3.7"
license = "MIT"
description = "Some core libraries for funlab-flaskr."
authors = ["SunnyLin <013.lin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sunnylin13/funlab-libs"
# documentation = "https://python-poetry.org/docs/"
packages = [{include = "funlab"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
colorama = "^0.4.6"
sqlalchemy = "^2.0.30"
cryptography = "^42.0.7"
pandas = "^2.2.2"
flask-caching = "^2.3.0"

[tool.poetry.group.docs.dependencies]
mkdocstrings-python = "^1.8.0"
mkdocs-material = "^9.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
